corrección de paque por parque

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <h2 class="portfolio__project-name">foto del parque</h2>
             </div>
             <div class="portfolio__project">
-                <h2 class="portfolio__project-name">foto del paque infantil</h2>
+                <h2 class="portfolio__project-name">foto del parque infantil</h2>
             </div>
             <div class="portfolio__project">
                 <h2 class="portfolio__project-name">foto de la capilla</h2>
