--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <h2 class="portfolio__title">HACERCA DE NUEVA ARICA</h2>
         <div class="portfolio__project-container">
             <div class="portfolio__project">
-                <h2 class="portfolio__project-name">Foto de la muni</h2>
+                <h2 class="portfolio__project-name">Foto de la Municipalidad</h2>
             </div>
             <div class="portfolio__project">
                 <h2 class="portfolio__project-name">foto del parque</h2>
