--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="PAGGINA.css">   
 
 <body>
+    <dialog open="">
+        <div class="modal__content">
+            <h2 class="modal__title">PAGINA DE NUEVA ARICA( en dasarrollo )</h2>
+            <p class="modal__text">Esta pagina esta en desarrollo por lo cual si visulisa un error no se preocupe, esta
+                en desarrollo se ira modificando con el tiempo.</p>
+        </div>
+        <form action="" method="dialog">
+            <button class="modal__clos-buttom">X</button>
+        </form>
+    </dialog>
+ 
     <header class="header">
         <input type="checkbox" class="header__checkbox" id="open-menu">
         <label for="open-menu" class="header__open-nav-buttom" role="button">=</label>
