se agregaron classes de imgenes
se agrego la clase muni, parque  y capilla

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pagina web</title>
-    <link rel="stylesheet" href="PAGGINA.css">   
+    <link rel="stylesheet" href="PAGGINA.css">
+    <link rel="shortcut icon" href="muni.jpeg" type="image/x-icon">
 
 <body>
     <dialog open="">
@@ -18,7 +19,7 @@
             <button class="modal__clos-buttom">X</button>
         </form>
     </dialog>
- 
+
     <header class="header">
         <input type="checkbox" class="header__checkbox" id="open-menu">
         <label for="open-menu" class="header__open-nav-buttom" role="button">=</label>
@@ -65,7 +66,7 @@
                                     <div class="load-bar__baar bar--20">20%</div>
                                 </div>
                                 <span class="profile__skill-name"> Ganaderia</span>
-                            </li> 
+                            </li>
                             <li class="profile__skill">
                                 <div class="load-bar">
                                     <div class="load-bar__baar bar--30">30%</div>
@@ -108,8 +109,8 @@
                                 </div>
                                 <span class="profile__skill-name">Manufactura y talleres </span>
                             </li>
-                        </ul>
-                    </div> 
+                        </ul> 
+                    </div>
                 </div>
             </div>
         </div>
@@ -117,17 +118,17 @@
     <section class="portfolio" id="portfolio">
         <h2 class="portfolio__title">HACERCA DE NUEVA ARICA</h2>
         <div class="portfolio__project-container">
-            <div class="portfolio__project">
-                <h2 class="portfolio__project-name">Foto de la muni</h2>
+            <div class="portfolio__project muni">
+                <h2 class="portfolio__project-name">Municipalidad del distrito.</h2>
             </div>
-            <div class="portfolio__project">
-                <h2 class="portfolio__project-name">foto del parque</h2>
+            <div class="portfolio__project  parque">
+                <h2 class="portfolio__project-name">Parque del distrito.</h2>
             </div>
             <div class="portfolio__project">
                 <h2 class="portfolio__project-name">foto del paque infantil</h2>
             </div>
-            <div class="portfolio__project">
-                <h2 class="portfolio__project-name">foto de la capilla</h2>
+            <div class="portfolio__project capilla">
+                <h2 class="portfolio__project-name">Capilla del distrito.</h2>
             </div>
             <div class="portfolio__project">
                 <h2 class="portfolio__project-name">foto del mercado</h2>
