--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <h2 class="portfolio__project-name">Parque del distrito.</h2>
             </div>
             <div class="portfolio__project">
-                <h2 class="portfolio__project-name">foto del paque infantil</h2>
+                <h2 class="portfolio__project-name">foto del parque infantil</h2>
             </div>
             <div class="portfolio__project capilla">
                 <h2 class="portfolio__project-name">Capilla del distrito.</h2>
