--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <dialog open="">
         <div class="modal__content">
             <h2 class="modal__title">PAGINA DE NUEVA ARICA( en dasarrollo )</h2>
-            <p class="modal__text">Esta pagina esta en desarrollo por lo cual si visulisa un error no se preocupe, esta
-                en desarrollo se ira modificando con el tiempo.</p>
+            <p class="modal__text">Esta página está en desarrollo, por lo tanto, 
+                si visualiza algún error, no se preocupe. Iremos mejorándola y realizando ajustes con el tiempo.</p>
         </div>
         <form action="" method="dialog">
             <button class="modal__clos-buttom">X</button>
@@ -218,7 +218,7 @@
                         <ul>
                             <li>Reservorio de Sorronto.</li>
                             <li>Cerro campana, conocido por sus leyendas.</li>
-                            <li>La Copuerta.</li>
+                            <li>La Compuerta.</li>
                             <li>Caserios productores de caña de azúcar</li>
                         </ul>
                     </div>
