--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
             <br><br>
             Si deseas aportar imágenes, información o sugerencias para agregar o mejorar alguna sección del
             sitio web, no dudes en comunicarte con nosotros a través de nuestro WhatsApp:
-            <a href="https://wa.me/918440948" target="_blank"  class="c">
-                <i class="fab fa-whatsapp"></i>
-            </a>
+            <a href="https://wa.me/918440948?text=Estoy%20interesad%40%20en%20contribuir%20en%20la%20creaci%C3%B3n%20del%20sitio%20web" target="_blank" class="c">
+    <i class="fab fa-whatsapp"></i>
+</a>
         </p>
     </div>
 
